# ayush_BE

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker.txt  export_medical_data.sh  import_medical_data.sh  pyproject.toml
config/: celery.py  settings.py  urls.py
data/: ICD-11-MMS-en-HF.csv  ayurveda.xls  icd11_entities.json  siddha.xls  unani.xls
namasthe_mapping/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
namasthe_mapping/management/commands/: debug_mappings.py  generate_embeddings.py  smart_embed_icd11.py  terminology_mappings.py  test_single_mapping.py
namasthe_mapping/migrations/: 0001_initial.py  0002_alter_conceptmapping_mapping_method.py
nginx/: nginx.conf
terminologies/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
terminologies/migrations/: 0005_add_pg_trgm_extension.py  0006_alter_ayurvedhamodel_options_alter_icd11term_options_and_more.py  0007_add_trigram_indexes.py  0008_add_search_vector_triggers.py  0009_rename_ayurvedhamodel_ayurvedha_and_more.py  0010_termmapping.py  0011_icd11synonym_remove_icd11term_class_kind_and_more.py  0012_auto_20250917_0155.py  0013_new_triggers_ICD11.py  0014_delete_icd11synonym.py  0014_icd11synonym_search_vector_and_more.py  0015_alter_icd11term_options_and_more.py  0016_alter_icd11term_options_and_more.py  0017_alter_icd11term_options_and_more.py  0018_add_fuzzy_search_indexes.py  0019_add_search_vector_triggers2.py  0020_ayurvedha_embedding_and_more.py
terminologies/services/: mapping_service.py
(+6 files in other folders)
