[project]
name = "django-postgre-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5.3",
    "django>=5.2.5",
    "django-admin-interface>=0.30.1",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-colorfield>=0.14.0",
    "django-cors-headers>=4.8.0",
    "django-filter>=25.1",
    "django-oauth-toolkit>=3.0.1",
    "django-redis>=6.0.0",
    "django-stubs>=5.2.2",
    "djangorestframework>=3.16.1",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.28.0",
    "drf-spectacular-sidecar>=2025.9.1",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "huggingface-hub>=0.35.0",
    "numpy>=2.3.2",
    "onnxruntime>=1.22.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pylint>=3.3.8",
    "redis>=5.2.1",
    "requests>=2.32.5",
    "ruff>=0.12.12",
    "transformers>=4.56.2",
    "uvicorn>=0.35.0",
]
